Prevent content jumping when vertical scrollbar appears
Also use correct order for diary entries, limit to 2 weeks for now

--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,6 @@ body,
   height: 100vh;
 }
 
-.home {
-  height: calc(100vh - var(--nav-height));
-  padding: 12px;
-  background-color: var(--secondary-color-hover);
-}
-
 h1,
 h2,
 h3,
