--- a/src/pages/new-entry/NewEntryPage.css
+++ b/src/pages/new-entry/NewEntryPage.css
@@ -1,8 +1,10 @@
 .new-entry {
-  height: 100%;
+  min-height: 100%;
   padding: 12px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 4px;
+  margin: 0 auto;
+  width: var(--home-content-width);
 }
 
 .new-entry__types {
